# src/modules/auth/dto/me-response.dto.ts
@@ -1,0 +1,21 @@
+// src/modules/auth/dto/me-response.dto.ts
+
+import { ApiProperty } from '@nestjs/swagger';
+import { UserRole } from '../../../common/enums/user-role.enum';
+
+export class MeResponseDto {
+  @ApiProperty({ format: 'uuid' })
+  id!: string;
+
+  @ApiProperty()
+  email!: string;
+
+  @ApiProperty({ enum: UserRole })
+  role!: UserRole;
+
+  @ApiProperty({ format: 'uuid', nullable: true })
+  merchantId!: string | null;
+
+  @ApiProperty({ type: String, format: 'date-time', nullable: true })
+  lastLoginAt!: Date | null;
+}
